--- a/studentManagementSystems/Views/Admin/Index.cshtml
+++ b/studentManagementSystems/Views/Admin/Index.cshtml
@@ -1,7 +1,68 @@
-﻿
+﻿@model IEnumerable<studentManagementSystems.Models.Student>
+
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Manage Students";
 }
 
-<h2>Index</h2>
+<h2>Manage Students</h2>
 
+<p>
+    @using (Html.BeginForm("Index", "Admin", FormMethod.Get))
+    {
+    <p>
+        Find by name, ID, or phone number: @Html.TextBox("searchString") <input type="submit" value="Search" />
+    </p>
+}
+    </p>
+
+    <p>
+        @Html.ActionLink("Create Student", "Create", "Admin", null, new { @class = "btn btn-primary" })
+    </p>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.ActionLink("Student ID", "Index", new { sortOrder = ViewBag.StudentIDSortParm })
+                </th>
+                <th>
+                    @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NameSortParm })
+                </th>
+                <th>Date of Birth</th>
+                <th>Student Email</th>
+                <th>Phone Number</th>
+                <th>Address</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StudentID)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DateOfBirth)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StudentEmail)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PhoneNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.StudentID }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.StudentID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.StudentID })
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
